[package]
name = "cancellation"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "timeout"
path = "timeout.rs"

[[bin]]
name = "select"
path = "select.rs"

[[bin]]
name = "select_loop"
path = "select_loop.rs"

[[bin]]
name = "select_by_reference"
path = "select_by_reference.rs"

[[bin]]
name = "abstract_services"
path = "abstract_services.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
